Units (#370)
* Add a script to add units

* Make the backend work

* Fix the ui and the edition

* Fix the ui

* f
