# Backend/Api/Data/Models/Common/Units.cs
@@ -1,0 +1,28 @@
+using LinqToDB.Mapping;
+
+namespace Api.Data.Models.Common;
+
+[Table(Schema = "Common")]
+public class Units
+{
+    [Column]
+    public required int Id { get; set; }
+
+    [Column]
+    public required string Code { get; set; }
+
+    [Column]
+    public string? Description { get; set; }
+
+    [Column]
+    public required int Type { get; set; }
+
+    [Column]
+    public int? BaseUnit { get; set; }
+
+    [Column]
+    public double? ConversionFactor { get; set; }
+
+    [Column]
+    public string? Formula { get; set; }
+}
