# Backend/Api/Models/Common/Unit.cs
@@ -1,0 +1,14 @@
+namespace Api.Models.Common;
+
+public class Unit
+{
+    public required UnitType Type { get; set; }
+
+    public required int Id { get; set; }
+
+    public required string Code { get; set; }
+
+    public string? Description { get; set; }
+
+    public Unit? BaseUnit { get; set; }
+}
